--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "declaration": true,
     "declarationDir": "dist/types",
     "baseUrl": ".",
+    "outDir": "dist",
+    "noEmitOnError": true,
     "esModuleInterop": true,
     "noImplicitAny": false,
     "importHelpers": true,
