--- a/package.json
+++ b/package.json
@@ -12,42 +12,43 @@
     "lint:pretty": "pretty-quick --staged",
     "prepare": "husky install",
     "clean:dist": "rimraf dist",
-    "pub": "cd dist && npm publish --registry=http://registry.npmjs.org --access public && cd ..",
-    "unpub": "npm unpublish vue3-draggable-resizer --force --registry=http://registry.npmjs.org",
+    "pub": "cd dist && npm publish --registry=https://registry.npmjs.org --access=public && cd ..",
+    "unpub": "npm unpublish vue3-draggable-resizer --force --registry=https://registry.npmjs.org",
     "prelink": "cd dist && yarn link && cd .. && yarn link vue3-draggable-resizer"
   },
   "dependencies": {
     "vue": "^3.2.6"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.4",
-    "@vitejs/plugin-vue": "^1.6.1",
-    "@vue/compiler-sfc": "^3.2.6",
-    "typescript": "^4.3.2",
-    "vite": "^2.5.4",
-    "vue-tsc": "^0.2.2",
-    "@vitejs/plugin-vue-jsx": "^1.1.8",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "@types/node": "^16.7.13",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.1",
-    "rimraf": "^3.0.2",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@intlify/vite-plugin-vue-i18n": "^2.3.0",
+    "@types/jest": "^27.0.1",
+    "@types/lodash-es": "^4.17.4",
+    "@types/node": "^16.7.13",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "husky": "^6.0.0",
-    "lint-staged": "^11.0.0",
-    "jest": "^27.1.1",
-    "@types/jest": "^27.0.1",
+    "@vitejs/plugin-vue": "^1.6.1",
+    "@vitejs/plugin-vue-jsx": "^1.1.8",
+    "@vue/compiler-sfc": "^3.2.6",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
+    "conventional-changelog-cli": "^2.1.1",
     "eslint": "^7.16.0",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.9.0",
-    "conventional-changelog-cli": "^2.1.1",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "sass": "^1.39.0"
+    "husky": "^6.0.0",
+    "jest": "^27.1.1",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.1",
+    "rimraf": "^3.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "sass": "^1.39.0",
+    "typescript": "^4.3.2",
+    "vite": "^2.5.4",
+    "vite-plugin-dts": "^0.8.2",
+    "vue-tsc": "^0.2.2"
   }
 }
